# ExpenseTracker

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build_cfgs.h.in
.github/workflows/: auto_gen.yml  build_win.yml
cli/: CMakeLists.txt
cmake/: copy_openssl_dlib.cmake  download_builtin_curl.cmake
core/: .gitignore  CMakeLists.txt
core/include/: basic_cexchange.h  config.h  core.h  curl_control.h  exception.h  g3log_sink.h  log.h  sql.h  sql_callbacks.h  sql_types.h  strconv.h
core/include/cexchange/: cexchange_reg.h  exchangerate_api.h  exchangerate_api_oae.h
core/include/core/: config.h  core.h  curl_callbacks.h  curl_control.h  g3log_sink.h  log.h  sql.h  sql_callbacks.h  sql_types.h
core/include/core/cexchange/: cexchange_reg.h  exchangerate_api.h  exchangerate_api_oae.h
core/src/: basic_cexchange.cpp  config.cpp  core.cpp  curl_callbacks.cpp  curl_control.cpp  exception.cpp  g3log_sink.cpp  sql.cpp  sql_callbacks.cpp  strconv.cpp
core/src/cexchange/: cexchange_reg.cpp  exchangerate_api.cpp  exchangerate_api_oae.cpp
core/tools/: update_basic_cexchange.py  update_config.py
core/tools/data/: ISO-4217.txt  update_basic_cexchange.cfg  update_config.cfg
core/tools/templates/update_basic_cexchange/: basic_cexchange.cpp.in
core/tools/templates/update_config/: config.cpp.in  config.h.in
etscript/: .gitignore  CMakeLists.txt  format_doc.md
etscript/include/: vm.h
etscript/include/etscript/: lex.h  vm.h
etscript/src/: lex.cpp  vm.cpp
etscript/tests/: CMakeLists.txt  test_lex_multiline.cpp  test_lex_singleline.cpp  test_vm_basiccalcs.cpp  test_vm_bitcalcs_judgements.cpp  test_vm_jz_jnz.cpp  test_vm_subroutine.cpp
etscript/tools/: update_tests.py
etscript/tools/data/: update_tests.cfg
etscript/tools/templates/update_tests/: CMakeLists.txt.in
